# AlphaRank

./: .pre-commit-config.yaml  README.md  app.py  justfile  main.py  pyproject.toml  test.sql
.github/workflows/: python-ci.yml
data/: mock_performance_data.parquet
frontend/: utils.py
frontend/pages/: analysis.py  config.py  configuration.py  data_input.py  data_pipeline.py  model_pipeline.py  results.py
script/: mock_data_generate.py
src/: config.py  orchestrator.py  pipeline.py
src/aggregators/portfolio_aggregator/: base.py  portfolio.py
src/aggregators/strategy_aggregator/: base.py  strategy.py
src/calculators/: base.py  factory.py  pipeline.py
src/calculators/impl/: return_metrics.py  risk_adjusted_return_metrics.py  risk_metrics.py
src/data/: pipeline.py  preprocessor.py  source.py  validator.py
src/data/preprocess/: base.py  factory.py  preprocessor.py  steps.py
src/generics/: factory.py
src/metrics/: base.py  factory.py  pipeline.py  scoring_pipeline.py
src/metrics/aggregator/: base.py  weighted_sum.py
src/metrics/calculator/: base.py  factory.py  performance_metrics.py  pipeline.py  ratio_metrics.py  risk_metrics.py
src/metrics/impl/: return_metrics.py  risk_adjusted_return_metrics.py  risk_metrics.py
src/metrics/portfolio_aggregator/: base.py  portfolio.py
src/metrics/standardizer/: base.py  factory.py  non_parametric.py  parametric.py
src/metrics/strategy_aggregator/: base.py  strategy.py
src/standardizers/: base.py  factory.py
src/weightings/: base.py  factory.py
tests/: conftest.py
tests/data/: test_pipeline.py
(+5 files in other folders)
